<resources>
    <string name="app_name">My News</string>

    <!-- MENU STRINGS -->
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="notifications_results">Notifications Results</string>

    <!-- SEARCH/NOTIFICATION ACTIVITY STRINGS -->
    <string name="search_query">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="switch_notification">Enable Notifications (once per day)</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_arts">ARTS</string>
    <string name="drawer_business">BUSINESS</string>
    <string name="drawer_entrepreneurs">ENTREPRENEURS</string>
    <string name="drawer_politics">POLITICS</string>
    <string name="drawer_sports">SPORTS</string>
    <string name="drawer_travel">TRAVEL</string>

    <!-- ABOUT POPUP -->
    <string name="about_popup_app">My News App : V1.0</string>
    <string name="about_popup_made_by">Made By DUBOSCQ Nicolas</string>

    <!-- HELP POPUP -->
    <string name="help_popup_title">My News - Help</string>
    <string name="help_popup_topstories_mostpop">Top Stories and Most Popular Tabs :</string>
    <string name="help_popup_topstories_mostpop_text">The articles in these two tabs are automatically set and can be refreshed by swipping.</string>
    <string name="help_popup_weekly_tabs">Weekly tabs :</string>
    <string name="help_popup_weekly_tabs_text">Weekly tab shows articles of the last 7 days from one selected section. Section can be selected in the Navigation Drawer Menu.</string>
    <string name="help_popup_search">Search Function :</string>
    <string name="help_popup_search_text">Articles can be search according to user wish. Click on the loop to go to search function. At least one query and one section must be selected. A list of articles will be shown as result or a no result popup is displayed.Searched articles are saved and can still be read in the Search tab.</string>
    <string name="help_popup_notification">Notification :</string>
    <string name="help_popup_notification_text">User can activate Notification. Go on the notification menu and select at least one section and one query. When the switch is activated notification will be scheduled every day at 8 am. Notifications are canceled when switch unactivated. Notification articles results are show by clicking on the ring icon in the home display.</string>

</resources>
