<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.duboscq.nicolas.mynews.MainActivity">

    <item
        android:id="@+id/action_notifications_results"
        android:icon="@drawable/ic_notification_24"
        android:title="@string/notifications_results"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_icon_24"
        android:title="@string/search"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:title="@string/notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>